# sampleci

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  conanfile.py
include/mathlib/: mathlib.hpp
src/: mathlib.cpp
